# giralibros

./: .gitignore  CLAUDE.md  Makefile  README.md  gunicorn.conf.py  main.py  manage.py  pyproject.toml
.github/workflows/: django.yml
books/: admin.py  backends.py  forms.py  models.py  tests.py  views.py
books/fixtures/: many_books.json  sample_books.json
books/migrations/: 0001_initial.py  0002_alter_offeredbook_notes_and_more.py  0003_exchangerequest_offered_book_and_more.py  0004_offeredbook_author_normalized_and_more.py  0005_alter_userlocation_area.py  0006_convert_caba_to_caba_centro.py  0007_offeredbook_cover_image.py  0008_offeredbook_cover_uploaded_at.py  0009_tempbookcover.py  0010_alter_offeredbook_notes_alter_userprofile_about.py  0011_alter_wantedbook_title.py  0012_offeredbook_status_offeredbook_status_changed_at.py  0012_userprofile_filter_my_locations_and_more.py  0013_userprofile_profile_picture.py  0014_add_offeredbook_likes.py  0015_add_like_model.py
books/static/: manifest.json  service-worker.js
books/templates/: _book_card.html  _book_card_details.html  _book_form_entry.html  _book_list.html  _exchange_button.html  about.html  base.html  base_logged.html  base_logged_out.html  contact.html  home.html  login.html  my_books.html  my_offered_books.html  my_wanted_books.html  profile.html  (+10 more)
cambiolibros/: asgi.py  settings.py  urls.py  wsgi.py
docs/: DJANGO_FORMSET_MIGRATION.md  INLINE_PHOTO_UPLOAD_PLAN.md  PHOTO_UPLOAD_PLAN.md  logged-out-book-list-plan.md
giralibros/: asgi.py  storage.py  urls.py  wsgi.py
templates/: base.html
(+21 files in other folders)
